@@ -1,3 +1,7 @@
+2024-11-26 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    *  Adapt to changes in svconnector, resolves #16
+
 2024-06-16 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Ensure compatibility with TYPO3 13, resolves #15
